--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,10 +1,29 @@
-.TextArea {
-  width: 600px;
-  height: 300px;
-  border: 2px solid red;
-  margin: auto;
+.container {
+  display: flex;
 }
 
-.cursor {
-  caret-color: cadetblue;
+.TabArea {
+  display: flex;
+  width: 23%;
+  height: 100%;
+  height: 99vh; /* 100 when we get rid of the border. */
+  border: 2px solid red;
+}
+
+.TextArea {
+  display: flex;
+  flex-grow: 1;
+  max-width: 76%;
+  border: 2px solid lime;
+}
+
+.actualText {
+  min-width: 1%;
+  max-width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin: 15px;
+  outline: 0px solid transparent;
+  word-wrap: break-word;
+  border: 2px solid blue;
 }
