--- a/src/app/App.css
+++ b/src/app/App.css
@@ -2,51 +2,92 @@
   display: flex;
 }
 
-@keyframes tabClosing {
-  from { width: 23%; }
-  to { width: 0%; }
+@keyframes tabAreaClosing {
+  from  { width: 23%; }
+  to    { width: 0%; }
 }
 
-@keyframes tabOpening {
-  from { width: 0%; }
-  to { width: 23%; }
+@keyframes tabAreaOpening {
+  from  { width: 0%; }
+  to    { width: 23%; }
 }
 
-.TabAreaOpen {
+.tabAreaOpen {
   display: flex;
   width: 23%;
-  height: 100%;
+  position: sticky;
+  top: 0px;
   height: 99vh; /* 100 when we get rid of the border. */
   border: 2px solid red;
-  animation-name: tabOpening;
+  animation-name: tabAreaOpening;
   animation-duration: 0.2s;
   animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.TabAreaClosed {
+.tabAreaClosed {
   display: flex;
   width: 0%;
   height: 100%;
   height: 99vh; /* 100 when we get rid of the border. */
   border: 2px solid red;
-  animation-name: tabClosing;
+  animation-name: tabAreaClosing;
   animation-duration: 0.2s;
   animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.TextAreaLarge {
+.textAreaLarge {
   display: flex;
   flex-grow: 1;
   max-width: 99%;
   border: 2px solid lime;
 }
 
-.TextAreaSmall {
+.textAreaSmall {
   display: flex;
   flex-grow: 1;
   max-width: 76%;
   border: 2px solid lime;
 }
+
+.tabsContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  margin: 20px;
+  border: 2px solid slateblue;
+}
+
+@keyframes tabClosing {
+  from  { color: rgba(1, 1, 1, 1); width: 100% }
+  to    { color: rgba(0, 0, 0, 0); width: 0% }
+}
+
+@keyframes tabOpening {
+  from  { color: rgba(0, 0, 0, 0); width: 0% }
+  to    { color: rgba(1, 1, 1, 1); width: 100% }
+}
+
+.tabOpen {
+  margin-bottom: 15px;
+  padding: 10px 0;
+  background-color: steelblue;
+  color: rgba(1, 1, 1, 1);
+  animation-name: tabOpening;
+  animation-duration: 0.1s;
+  animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.tabClosed {
+  margin-bottom: 15px;
+  padding: 10px 0;
+  background-color: steelblue;
+  color: rgba(0, 0, 0, 0);
+  animation-name: tabClosing;
+  animation-duration: 0.1s;
+  animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
 
 .actualText {
   width: 100%;
