--- a/src/app/styles/reset.css
+++ b/src/app/styles/reset.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: 'JetBrainsMono';
+  src: url('../../JetBrainsMono-Regular.woff2') format('woff2');
+}
+
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
   box-sizing: border-box;
-  -webkit-app-region: drag; /* TODO: Only make a "title bar" draggable! */
+  font-family: 'JetBrainsMono', Fallback, sans-serif;
+  -webkit-app-region: no-drag;
+  background-color: #2E3440;
 }
