Set cursor to 'pointer' when hovering a tab

--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -43,6 +43,7 @@
       // border: 2px solid slateblue;
 
       .Tab {
+        cursor: pointer;
         border: none;
         margin-bottom: 15px;
         padding: 10px 0;
