--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -48,6 +48,7 @@
         margin-bottom: 15px;
         padding: 10px 0;
         font-size: 0.75em;
+        user-select: none; // prevents selection highlighting
         // border: 2px solid red;
 
         &:focus {
@@ -166,5 +167,42 @@
       padding-left: 50px;
       color: #D8DEE9;
     }
+  }
+
+  .ContextMenu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px 15px;
+    border-radius: 3px;
+    // border-radius: 0px 5px 5px 5px;
+    background-color: #3B4252;
+    box-shadow: 5px 5px 30px -3px rgba(0,0,0,0.22);
+    position: absolute;
+    z-index: 1;
+    width: 150px;
+
+    &:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 0;
+      height: 0;
+      border: 10px solid transparent;
+      border-right-color: #3B4252;
+      border-left: 0;
+      margin-top: -42px;
+      margin-left: -6px;
+    }
+  }
+
+  .ContextMenuItem {
+    text-align: left;
+    color: #D8DEE9;
+    background-color: #3B4252;
+    padding: 10px;
+    border: none;
+    user-select: none; // prevents selection highlighting
   }
 }
