(WIP) Implement tab name editing functionality

--- a/src/app/components/framework/PopupDialog/styles.scss
+++ b/src/app/components/framework/PopupDialog/styles.scss
@@ -1,15 +1,15 @@
-// .PopupDialog {
-//   background-color: yellow;
+.PopupDialog {
+  background-color: yellow;
 
-//   &--HeaderText {
-//     color: lightseagreen;
-//   }
+  &--HeaderText {
+    color: lightseagreen;
+  }
 
-//   &--ButtonCancel {
-//     background-color: hotpink;
-//   }
+  &--ButtonCancel {
+    background-color: hotpink;
+  }
 
-//   &--ButtonPrimary {
-//     background-color: lawngreen;
-//   }
-// }
+  &--ButtonPrimary {
+    background-color: lawngreen;
+  }
+}
