--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -2,6 +2,7 @@
 $draggable-height: 8vh;
 $full-working-height: 100vh - $draggable-height;
 $tab-pane-width: 20%;
+$text-editor-font-size: 0.9em;
 
 /* Misc Variables */
 $tab-area-slide-animation-func: cubic-bezier(0.165, 0.84, 0.44, 1);
