Implement tab move up/down functionality (WIP)

--- a/src/app/components/framework/PopupMenu/styles.scss
+++ b/src/app/components/framework/PopupMenu/styles.scss
@@ -35,4 +35,13 @@
   margin: 2px 0;
   user-select: none; // prevents selection highlighting
   cursor: pointer;
+
+  &--disabled {
+    cursor: default;
+    color: #4C566A;
+
+    &:focus {
+      outline: 0;
+    }
+  }
 }
