Big refactor (introduced Redux)
State management was getting a bit messy with standalone React, so I
decided to introduce Redux and refactor everything.

Also on this commit:
* Implemented tab move up/down logic
* Implemented tab delete logic
* Initial app state is now loaded from the database

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -160,7 +160,7 @@
         font-size: $text-editor-font-size;
         line-height: 1.5em;
         // letter-spacing: 0.05em;
-        color: #c0c6d1;
+        color: #D8DEE9;
         /* caret-color: transparent; */
         // border: 1px solid blue;
       }
