Remove FiraCode and move font to new folder

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,12 +1,7 @@
 @font-face {
   font-family: 'JetBrainsMono';
-  src: url('../JetBrainsMono-Regular.woff2') format('woff2');
+  src: url('../fonts/JetBrainsMono-Regular.woff2') format('woff2');
 }
-
-// @font-face {
-//   font-family: 'FiraCode';
-//   src: url('../FiraCode-Regular.woff2') format('woff2');
-// }
 
 * {
   margin: 0;
