Smooth scroll to new tab after Cmd+N; Also hide TabsContainer scrollbar

--- a/src/components/TabArea/TabArea.scss
+++ b/src/components/TabArea/TabArea.scss
@@ -26,6 +26,11 @@
     overflow-y: auto;
     overflow-x: hidden;
     margin: 45px 0px 0px 0px;
+
+    &::-webkit-scrollbar {
+      width: 0px;
+      background: transparent;
+    }
   }
 }
 
