Make textarea full-height (titlebar still exists, but is overlayed on top)

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,14 +1,20 @@
 @import '../../styles/variables.scss';
 
 .__title-bar {
+  z-index: 9999;
+  position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
-  height: $draggable-height;
+  height: 2.3rem;
   -webkit-app-region: drag;
+  background-color: transparent;
 }
 
 .__working-area-container {
   display: flex;
   overflow: hidden;
+  height: 100vh;
 
   .__right-pane-area-container {
     display: flex;
