--- a/src/components/BottomPane/BottomPane.scss
+++ b/src/components/BottomPane/BottomPane.scss
@@ -2,7 +2,7 @@
 
 .BottomPane {
   width: 100%;
-  height: $draggable-height;
+  height: $bottom-pane-height;
   padding-left: 50px;
   color: #D8DEE9;
 }
