--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -1,25 +1,18 @@
 @import '../../styles/variables.scss';
 
-.TextEditorPane {
+.TextEditor {
   width: 100%;
-  height: 100%;
-  padding: 50px 0px 50px 65px;
-
-  .TextEditor {
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    outline: none;
-    border: none;
-    background-color: transparent;
-    resize: none;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    font-size: $text-editor-font-size;
-    line-height: 1.5em;
-    // letter-spacing: 0.05em;
-    color: #D8DEE9;
-    /* caret-color: transparent; */
-    // border: 1px solid blue;
-  }
+  height: $text-area-height;
+  padding: 55px;
+  overflow-y: auto;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  resize: none;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  font-size: $text-editor-font-size;
+  line-height: 1.5em;
+  letter-spacing: 0.02em;
+  color: #D8DEE9;
 }
