--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 /* Global Variables */
-$draggable-height: 8vh;
-$full-working-height: 100vh - $draggable-height;
 $tab-pane-width: 20%;
+$bottom-pane-height: 8%;
+$text-area-height: 100% - $bottom-pane-height;
 $text-editor-font-size: 0.9em;
 
 /* Misc Variables */
