--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -11,8 +11,8 @@
   resize: none;
   white-space: pre-wrap;
   word-wrap: break-word;
-  font-size: $text-editor-font-size;
-  line-height: 1.5em;
+  font-size: 0.85em;
+  line-height: 1.7em;
   letter-spacing: 0.02em;
   color: #D8DEE9;
 
