--- a/src/components/BottomPane/BottomPane.scss
+++ b/src/components/BottomPane/BottomPane.scss
@@ -5,4 +5,7 @@
   height: $bottom-pane-height;
   padding-left: 50px;
   color: #D8DEE9;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
