--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -17,11 +17,11 @@
   color: #D8DEE9;
 
   &::-webkit-scrollbar {
-    width: 4px;
+    width: 3px;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: #8FBCBB;
+    background-color: #88C0D0;
     border-radius: 20px;
   }
 
