Keep track of, persist and load-on-start window dimensions
Also on this commit:
- The titlebar is not invisible anymore; if it were, it'd make the
text hit the semaphores in OSX.
- Default values are set and loaded for window dimensions (including
minWidth/minHeight), always-on-top, etc.

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,10 +5,9 @@
   position: absolute;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 99%; // Leave just a tiny bit for the scrollbar of the TextArea to be fully visibile.
   height: 2.3rem;
   -webkit-app-region: drag;
-  background-color: transparent;
 }
 
 .__working-area-container {
