Add initial placeholder text variations to display onn empty tabs

--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -16,6 +16,10 @@
   letter-spacing: 0.02em;
   color: #D8DEE9;
 
+  &::placeholder {
+    color: rgba(76,86,106,1);
+  }
+
   &::-webkit-scrollbar {
     width: 3px;
   }
