--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -19,5 +19,14 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+
+    .__bottom-bar {
+      z-index: 9999;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 99%; // Leave just a tiny bit for the scrollbar of the TextArea to be fully visibile.
+      height: 2.3rem;
+    }
   }
 }
