--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variables.scss';
 
-.__title-bar {
+.title-bar {
   z-index: 9999;
   position: absolute;
   left: 0;
@@ -10,17 +10,17 @@
   -webkit-app-region: drag;
 }
 
-.__working-area-container {
+.working-area-container {
   display: flex;
   overflow: hidden;
   height: 100vh;
 
-  .__right-pane-area-container {
+  .right-pane-area-container {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
 
-    .__bottom-bar {
+    .bottom-bar {
       z-index: 9999;
       position: absolute;
       left: 0;
