Add tab key support for textarea

--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -10,9 +10,8 @@
   border: none;
   background-color: transparent;
   resize: none;
-  white-space: normal;
-  // white-space: pre-wrap;
-  // word-wrap: break-word;
+  white-space: pre-wrap;
+  word-wrap: break-word;
   font-size: 0.82em;
   line-height: 1.7em;
   letter-spacing: 0.02em;
