--- a/src/components/NewTabButton/NewTabButton.scss
+++ b/src/components/NewTabButton/NewTabButton.scss
@@ -1,4 +1,5 @@
-@import '../../styles/variables.scss';
+$slide-animation-func: cubic-bezier(0.165, 0.84, 0.44, 1);
+$slide-animation-duration: 0.25s;
 
 .NewTabButton {
   border: none;
@@ -6,7 +7,7 @@
   color: #E5E9F0;
   width: 0%;
   opacity: 0;
-  transition: all $tab-area-slide-animation-duration $tab-area-slide-animation-func;  
+  transition: all $slide-animation-duration $slide-animation-func;  
 }
 
 .NewTabButton.open {
