--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -1,4 +1,5 @@
-@import '../../styles/variables.scss';
+$bottom-pane-height: 8%;
+$text-area-height: 100% - $bottom-pane-height;
 
 .TextEditor {
   width: 100%;
@@ -39,5 +40,20 @@
 
   &::-webkit-scrollbar-track {
     background: transparent;
+  }
+}
+
+.bottom-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: $bottom-pane-height;
+
+  .info {
+    color: rgba(76,86,106,1);
+    font-size: 0.75em;
   }
 }
