--- a/src/components/ToastPopup/ToastPopup.scss
+++ b/src/components/ToastPopup/ToastPopup.scss
@@ -1,4 +1,5 @@
-@import '../../styles/variables.scss';
+$toast-animation-func: ease-in-out;
+$toast-animation-duration: 0.25s;
 
 .ToastPopup {
   display: flex;
