--- a/src/reset.scss
+++ b/src/reset.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'JetBrainsMono';
-  src: url('../fonts/JetBrainsMono-Regular.woff2') format('woff2');
+  src: url('./fonts/JetBrainsMono-Regular.woff2') format('woff2');
 }
 
 * {
