--- a/src/reset.scss
+++ b/src/reset.scss
@@ -9,5 +9,5 @@
   box-sizing: border-box;
   font-family: 'JetBrainsMono', Fallback, sans-serif;
   -webkit-app-region: no-drag;
-  background-color: #2E3440;
+  background-color: var(--background-primary-color);
 }
