--- a/src/components/ToastPopup/ToastPopup.scss
+++ b/src/components/ToastPopup/ToastPopup.scss
@@ -12,13 +12,13 @@ $toast-animation-duration: 0.25s;
   margin-top: 20px;
   width: 230px;
   height: 40px;
-  background-color: #3B4252;
+  background-color: var(--background-secondary-color);
   text-align: center;
   padding: 15px;
   font-size: 0.7em;
   border-radius: 2px;
   box-shadow: 5px 5px 30px -3px rgba(0,0,0,0.22);
-  color: #D8DEE9;
+  color: var(--text-primary-color);
   transition: all $toast-animation-func $toast-animation-duration;
 }
 
